--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nodemda",
   "version": "0.2.0",
   "description": "UML to Source code generation engine",
-  "main": "./lib/index.js",
+  "main": "./src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,6 +10,10 @@
     "type": "git",
     "url": "git+https://github.com/joelkoz/NodeMDA.git"
   },
+  "files": [
+     "src",
+     "bin"
+  ],
   "keywords": [
     "uml",
     "mda",
@@ -26,6 +30,7 @@
   "license": "MIT",
   "dependencies": {
     "commander": "^2.9.0",
+    "fs-extra": "^0.30.0",
     "glob": "^7.0.6",
     "handlebars": "^4.0.5",
     "winston": "^2.2.0"
