--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "url": "git+https://github.com/joelkoz/NodeMDA.git"
   },
   "files": [
-     "src",
-     "bin"
+    "src",
+    "bin"
   ],
   "keywords": [
     "uml",
@@ -33,6 +33,7 @@
     "fs-extra": "^0.30.0",
     "glob": "^7.0.6",
     "handlebars": "^4.0.5",
+    "lodash": "^4.16.6",
     "winston": "^2.2.0"
   }
 }
