--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "glob": "^7.0.6",
     "handlebars": "^4.0.5",
     "lodash": "^4.16.6",
+    "omni-schema": "^1.5.0",
     "winston": "^2.2.0"
   }
 }
