--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
   "license": "MIT",
   "dependencies": {
     "commander": "^2.9.0",
+    "faker": "^3.1.0",
     "fs-extra": "^0.30.0",
     "glob": "^7.0.6",
     "handlebars": "^4.0.5",
+    "joi": "^9.2.0",
     "lodash": "^4.16.6",
     "omni-schema": "^1.5.0",
     "winston": "^2.2.0"
