--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nodemda",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "UML to Source code generation engine",
   "main": "./src/index.js",
   "scripts": {
@@ -29,16 +29,15 @@
   },
   "license": "MIT",
   "dependencies": {
-    "commander": "^2.9.0",
+    "commander": "^2.20.3",
     "faker": "^3.1.0",
-    "fs-extra": "^0.30.0",
-    "glob": "^7.0.6",
-    "handlebars": "^4.0.5",
-    "joi": "^9.2.0",
-    "lodash": "^4.16.6",
+    "fs-extra": "^11.2.0",
+    "glob": "^11.0.0",
+    "handlebars": "4.5.3",
+    "lodash": "^4.17.21",
     "omni-schema": "^2.0.3",
-    "pluralize": "^3.0.0",
-    "prompt-sync": "^4.1.4",
-    "winston": "^2.2.0"
+    "pluralize": "^3.1.0",
+    "prompt-sync": "^4.2.0",
+    "winston": "^2.4.5"
   }
 }
